Fixing licensing issues and adding link to documentation

--- a/INSTALL
+++ b/INSTALL
@@ -90,7 +90,8 @@ $ ibus-setup
 
 and changing the options on the General tab.
 
-The Slavonic input method is described in detail in docen.pdf.
+The Slavonic input method is described in detail in
+http://www.ponomar.net/files/docen.pdf.
 
 If you are doing serious work typesetting Church Slavic, you should read
 our Roadmap for Slavonic Typography in the Unicode Standard, available on
