--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+m17n-cu (1.2.0) unstable; urgency=medium
+
+  * Adding Znamenny Notation keyboard drivers
+
+ -- Aleksandr Andreev <aleksandr.andreev@gmail.com>  Wed, 14 Jan 2020 16:18:34 +0300
+
 m17n-cu (1.1.0) unstable; urgency=medium
 
   * Adding Glagolitic keyboard drivers for m17n
